@startuml discord

hide circle

entity User {
    * id: <<uuid>>
    ---
    * username: string
    * email: string
    * hashedPassword: string
    * salt: string
    * createdAt: timestamp
    editedAt: timestamp
    deletedAt: timestamp
    * avatar: <<url>>
}

entity Subpage {
    *id: <<uuid>>
    ---
    * creatorId: <<FK>>
    * name: string
    * description: string
    * icon: <<url>>
    deletedAt: timestamp
    * createdAt: timestamp
}

entity Label {
    *id: <<uuid>>
    ---
    * subpageId: <<FK>>
    * name: string
    deletedAt: timestamp
    * createdAt: timestamp
}

entity Role {
    * id: <<uuid>>
    ---
    * userId: <<FK>>
    * subpageId: <<FK>>
    * roleType: enum
}

entity Task {
    * id: <<uuid>>
    ---
    * taskName: string
    * status: boolean
    * dueDate: Date
    * labelId: <<FK>>
    * creatorId: <<FK>>
    * order_in_list: <<FK>>
    * order_in_label: <<FK>>
    * content: any
    * createdAt: timestamp
    deletedAt: timestamp
}

entity TaskEdit {
    * id: <<uuid>>
    ---
    * editorId: <<FK>>
    * taskId: <<FK>>
    editedAt: timestamp
    * originalContent: string
}
entity LabelEdit {
    * id: <<uuid>>
    ---
    * editorId: <<FK>>
    * labelId: <<FK>>
    editedAt: timestamp
    * originalContent: string
}
entity SubpageEdit {
    * id: <<uuid>>
    ---
    * editorId: <<FK>>
    * subpageId: <<FK>>
    editedAt: timestamp
    * originalContent: string
}

entity Comment {
    * id: <<uuid>>
    ---
    * taskId: <<FK>>
    * commenterId: <<FK>>
    * createdAt: timestamp
    deletedAt: timestamp
    editedAt: timestamp   
}

User }|..o{ Task : has
Subpage ||..o{ Label : has
Label ||..o{ Task : has
Task ||..o{ Comment : has
User ||..o{ Comment : comments
Task ||..o{ TaskEdit
User ||..o{ TaskEdit

Label ||..o{ LabelEdit
User ||..o{ LabelEdit

Subpage ||..o{ SubpageEdit
User ||..o{ SubpageEdit

User ||..o{ Role : has
Role ||..o{ Subpage : has
@enduml
